# procon29-kyogi

./: .gitignore  CMakeLists.txt  README.md  build.sh  start.sh
haruhi/: README.md  haruhi.rb  procon29_protocol.rb
kyon/: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  execute.sh  setup.sh
kyon/project_config/: CMakeLists.txt
kyon/project_config/kyon.xcodeproj/: project.pbxproj
kyon/project_config/kyon.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
kyon/project_config/kyon.xcodeproj/xcuserdata/nazuna.xcuserdatad/xcschemes/: kyon.xcscheme  xcschememanagement.plist
kyon/siv3d_v0.2.3_alpha_Linux/kyon/: CMakeLists.txt
kyon/src/: Button.cpp  Button.hpp  Color.hpp  CommandGUI.cpp  CommandGUI.hpp  Command_gui.hpp  Field.cpp  Field.hpp  FieldSquare.cpp  FieldSquare.hpp  Game.cpp  Game.hpp  Main.cpp  MoveData.cpp  MoveData.hpp  ProblemState.cpp  ProblemState.hpp  SolverAnswer.cpp  SolverAnswer.hpp  TurnFinish.cpp  TurnFinish.hpp  button.cpp  button.hpp  fieldSquare.cpp  fieldSquare.hpp
mikuru/: CMakeLists.txt  README.md  _template.hpp  color.h  color.hpp  color_field.cc  color_field.cpp  color_field.h  color_field.hpp  field.cc  field.cpp  field.h  field.hpp  mikuru.cc  mikuru.cpp  problem_state.cc  problem_state.cpp  problem_state.h  problem_state.hpp  qr.cpp  qr.hpp  type.h  types.h
mikuru/mikuru/: .clang-format  _template.hpp  color.hpp  color_field.cpp  color_field.hpp  field.cpp  field.hpp  mikuru.cpp  problem_state.cpp  problem_state.hpp  qr.cpp  qr.hpp  types.hpp
nagato/: .gitignore  CMakeLists.txt  README.md  dub.json
nagato/nagato/: _template.hpp  field.hpp  nagato.cpp  types.hpp
nagato/source/: _template.d  agent.d  app.d  beam_searcher.d  color.d  connection.d  field.d  field_state.d  montecalro.d  montecarlo.d  point.d  problem.d  solver.d  state.d
nagato/source/algorithm/: package.d
nagato/source/container/: package.d  zobrist_hash.d
nagato/source/util/: judge.d  package.d  problem_generator.d  visualizer.d
