cmake_minimum_required(VERSION 3.10)
project(kyon)

set(CMAKE_CXX_STANDARD 11)

include_directories(siv3d_v0.2.3_alpha_Linux)
include_directories(siv3d_v0.2.3_alpha_Linux/include)
include_directories(siv3d_v0.2.3_alpha_Linux/include/HamFramework)
include_directories(siv3d_v0.2.3_alpha_Linux/include/Siv3D)
include_directories(siv3d_v0.2.3_alpha_Linux/include/ThirdParty)
include_directories(siv3d_v0.2.3_alpha_Linux/include/ThirdParty/angelscript)
include_directories(siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal)
include_directories(siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/archives)
include_directories(siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/details)
include_directories(siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types)
include_directories(siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/concepts)
include_directories(siv3d_v0.2.3_alpha_Linux/include/ThirdParty/fmt)
include_directories(siv3d_v0.2.3_alpha_Linux/include/ThirdParty/hopscotch-map)
include_directories(siv3d_v0.2.3_alpha_Linux/include/ThirdParty/libsvm)
include_directories(siv3d_v0.2.3_alpha_Linux/include/ThirdParty/nanoflann)
include_directories(siv3d_v0.2.3_alpha_Linux/include/ThirdParty/SFMT)
include_directories(src)

add_executable(kyon
        image/HandL00.png
        image/HandL01.png
        image/HandL02.png
        image/HandL03.png
        image/HandR00.png
        image/HandR01.png
        image/HandR02.png
        image/HandR03.png
        image/HandR04.png
        image/HandR05.png
        siv3d_v0.2.3_alpha_Linux/include/HamFramework/Camera2D.hpp
        siv3d_v0.2.3_alpha_Linux/include/HamFramework/InputDeviceSymbol.hpp
        siv3d_v0.2.3_alpha_Linux/include/HamFramework/JoyConSymbol.hpp
        siv3d_v0.2.3_alpha_Linux/include/HamFramework/MiniScene.hpp
        siv3d_v0.2.3_alpha_Linux/include/HamFramework/OptimalScreen.hpp
        siv3d_v0.2.3_alpha_Linux/include/HamFramework/PlayingCard.hpp
        siv3d_v0.2.3_alpha_Linux/include/HamFramework/Rx.hpp
        siv3d_v0.2.3_alpha_Linux/include/HamFramework/ScalableWindow.hpp
        siv3d_v0.2.3_alpha_Linux/include/HamFramework/SceneManager.hpp
        siv3d_v0.2.3_alpha_Linux/include/HamFramework/SevenSegment.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/_TEMPLATE.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/AlignedAllocator.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/AlignedMemory.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Array.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Asset.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/AssetHandle.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Audio.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/AudioAsset.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/AudioFormat.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Base64.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Bezier2.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Bezier3.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/BigFloat.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/BigInt.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/BigNumber.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/BinaryReader.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/BinaryWriter.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/BlendState.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/BoolArray.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/BoolFormat.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Byte.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/ByteArray.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/ByteArrayView.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Char.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Circle.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Circular.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Clipboard.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Color.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/ColorComponents.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/ColorPalette.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Compression.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/ConcurrentTask.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Console.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/ConstantBuffer.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/CPU.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/CSVData.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Cursor.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/CustomStopwatch.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Cylindrical.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Date.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/DateTime.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/DeadZone.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/DefaultRNG.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Distribution.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/DragDrop.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Duration.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/DynamicTexture.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Easing.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/EasingController.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Effect.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Ellipse.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Emoji.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/EmojiDictionary.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Evaluater.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Exif.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/FFT.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/FileSystem.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/FloatFormat.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/FloatQuad.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/FloatRect.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Font.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/FontAsset.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Format.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/FormatLiteral.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/FormatUtility.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Functor.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Fwd.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Gamepad.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Geometry2D.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Graphics.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Graphics2D.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Grid.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/HalfFloat.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/HardwareRNG.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Hash.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/HashSet.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/HashTable.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/HighPerfoemanceGPU.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/HSV.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/HTMLWriter.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Icon.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Image.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/ImageFormat.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/ImageProcessing.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/ImageRegion.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Indexed.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/InfiniteList.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/INIData.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Intersection.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/IntFormat.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/IPv4.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/IReader.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/IWriter.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/JoyCon.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/JSONReader.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/KDTree.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Key.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Keyboard.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/KeyConjunction.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/KeyGroup.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Lerp.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/LetterCase.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/LicenseManager.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Line.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/LineString.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Logger.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Mat3x2.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Math.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/MathConstants.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/MathParser.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/MD5.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/MemoryMapping.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/MemoryWriter.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/MersenneTwister.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/MessageBox.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Meta.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/MicrosecClock.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/MillisecClock.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Monitor.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Mouse.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/NamedParameter.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/NavMesh.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Network.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Number.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/OffsetCircular.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Optional.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/OutlineGlyph.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Parse.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/ParseBool.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/ParseFloat.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/ParseInt.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Periodic.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/PerlinNoise.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Physics2D.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/PixelShader.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/PlaceHolder.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Platform.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Point.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/PointVector.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Polygon.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/PowerStatus.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Print.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/ProController.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Profiler.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Quad.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Random.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/RandomColor.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/RandomPoint.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/RandomVec2.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/RandomVec3.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/RandomVec4.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/RangeIterator.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/RasterizerState.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/RDTSCClock.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/ReaderView.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Rectangle.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/RenderStateBlock2D.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/RenderTexture.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Resource.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/RoundRect.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/SamplerState.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/ScreenCapture.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Script.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Serialize.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/SFMT.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Shader.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Shape2D.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/SIMDMath.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Spherical.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Spline.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Sprite.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Step.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Step2D.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Step_MSVC.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Stopwatch.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/String.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/StringView.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/SVM.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/System.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/TCPClient.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/TCPServer.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/TextBox.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/TextEditor.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/TextEncoding.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/TextInput.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/TextReader.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Texture.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/TextureAsset.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/TexturedCircle.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/TextureDesc.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/TexturedQuad.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/TexturedRoundRect.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/TextureFormat.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/TextureRegion.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/TextWriter.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Threading.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Time.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/TimeProfiler.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Timer.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/TOMLReader.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Transformer2D.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Transition.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Triangle.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Twitter.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Types.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/TypeTraits.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Uncopyable.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Unicode.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Unspecified.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Utility.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Vector2D.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Vector3D.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Vector4D.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Version.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Vertex2D.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/VertexShader.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/ViewportBlock2D.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Wave.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/WaveSample.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Window.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Windows.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/WritableMemoryMapping.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/XInput.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/XMLReader.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/Xorshift.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D/XXHash.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/angelscript/angelscript.h
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/archives/binary.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/archives/portable_binary.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/details/helpers.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/details/polymorphic_impl.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/details/polymorphic_impl_fwd.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/details/static_object.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/details/traits.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/details/util.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/concepts/pair_associative_container.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/array.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/base_class.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/bitset.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/boost_variant.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/chrono.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/common.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/complex.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/deque.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/forward_list.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/functional.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/list.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/map.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/memory.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/polymorphic.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/queue.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/set.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/stack.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/string.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/tuple.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/unordered_map.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/unordered_set.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/utility.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/valarray.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/types/vector.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/access.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/cereal.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/cereal/macros.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/fmt/format.h
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/hopscotch-map/hopscotch_hash.h
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/hopscotch-map/hopscotch_map.h
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/hopscotch-map/hopscotch_set.h
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/libsvm/svm.h
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/nanoflann/nanoflann.hpp
        siv3d_v0.2.3_alpha_Linux/include/ThirdParty/SFMT/SFMT.hpp
        siv3d_v0.2.3_alpha_Linux/include/HamFramework.hpp
        siv3d_v0.2.3_alpha_Linux/include/Siv3D.hpp
        src/button.cpp
        src/button.hpp
        src/CommandGUI.cpp
        src/CommandGUI.hpp
        src/Main.cpp)
